--- a/generation-pipeline/configuration.json
+++ b/generation-pipeline/configuration.json
@@ -20,7 +20,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -49,7 +50,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -86,7 +88,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -123,7 +126,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -168,7 +172,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -221,7 +226,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -282,7 +288,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -311,7 +318,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -348,7 +356,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -377,7 +386,8 @@
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -399,7 +409,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -421,7 +432,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -443,7 +455,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -465,7 +478,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -486,7 +500,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -515,7 +530,8 @@
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -544,7 +560,8 @@
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -573,7 +590,8 @@
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -602,7 +620,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -631,7 +650,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -653,7 +673,8 @@
       }
     ],
     "output": {
-      "type": "float"
+      "type": "float",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -684,7 +705,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -706,7 +728,8 @@
       }
     ],
     "output": {
-      "type": "str"
+      "type": "str",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -737,7 +760,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -759,7 +783,8 @@
       }
     ],
     "output": {
-      "type": "str"
+      "type": "str",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -781,7 +806,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -803,7 +829,8 @@
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -825,7 +852,8 @@
       }
     ],
     "output": {
-      "type": "str"
+      "type": "str",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -847,7 +875,8 @@
       }
     ],
     "output": {
-      "type": "str"
+      "type": "str",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -869,7 +898,8 @@
       }
     ],
     "output": {
-      "type": "List[str]"
+      "type": "List[str]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -900,7 +930,8 @@
       }
     ],
     "output": {
-      "type": "List[int]"
+      "type": "List[int]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -922,7 +953,8 @@
       }
     ],
     "output": {
-      "type": "List[int]"
+      "type": "List[int]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -945,7 +977,8 @@
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "sudoku_output_mapping"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -968,7 +1001,8 @@
       }
     ],
     "output": {
-      "type": "List[List[str]]"
+      "type": "List[List[str]]",
+      "output_mapping": "sudoku_output_mapping"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -990,7 +1024,8 @@
       }
     ],
     "output": {
-      "type": "List[int]"
+      "type": "List[int]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1013,7 +1048,8 @@
       }
     ],
     "output": {
-      "type": "List[List[int]]"
+      "type": "List[List[int]]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1035,7 +1071,8 @@
       }
     ],
     "output": {
-      "type": "List[List[str]]"
+      "type": "List[List[str]]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1057,7 +1094,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1080,7 +1118,8 @@
       }
     ],
     "output": {
-      "type": "List[int]"
+      "type": "List[int]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1102,7 +1141,8 @@
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1123,7 +1163,8 @@
       }
     ],
     "output": {
-      "type": "List[List[int]]"
+      "type": "List[List[int]]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1146,7 +1187,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1168,7 +1210,8 @@
       }
     ],
     "output": {
-      "type": "List[int]"
+      "type": "List[int]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1189,7 +1232,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1220,7 +1264,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1249,7 +1294,8 @@
       }
     ],
     "output": {
-      "type": "List[List[int]]"
+      "type": "List[List[int]]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1271,7 +1317,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1293,7 +1340,8 @@
       }
     ],
     "output": {
-      "type": "List[List[int]]"
+      "type": "List[List[int]]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1315,7 +1363,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1355,7 +1404,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1377,7 +1427,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1399,7 +1450,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1421,7 +1473,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1444,7 +1497,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1465,7 +1519,8 @@
       }
     ],
     "output": {
-      "type": "char"
+      "type": "char",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1487,7 +1542,8 @@
       }
     ],
     "output": {
-      "type": "List[int]"
+      "type": "List[int]",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1510,7 +1566,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1531,7 +1588,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1553,7 +1611,8 @@
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1576,7 +1635,8 @@
       }
     ],
     "output": {
-      "type": "bool"
+      "type": "bool",
+      "output_mapping": "sudoku_output_mapping"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1599,7 +1659,8 @@
       }
     ],
     "output": {
-      "type": "List[List[str]]"
+      "type": "List[List[str]]",
+      "output_mapping": "sudoku_output_mapping"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1622,7 +1683,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1653,7 +1715,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1675,7 +1738,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1697,7 +1761,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -1719,7 +1784,8 @@
       }
     ],
     "output": {
-      "type": "int"
+      "type": "int",
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
