--- a/generation-pipeline/configuration.json
+++ b/generation-pipeline/configuration.json
@@ -1642,7 +1642,7 @@
     ],
     "output": {
       "type": "bool",
-      "output_mapping": "sudoku_output_mapping"
+      "output_mapping": "unknown"
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
