--- a/generation-pipeline/configuration.json
+++ b/generation-pipeline/configuration.json
@@ -2062,7 +2062,10 @@
     ],
     "output": {
       "type": "List[List[int]]",
-      "output_mapping": "unknown"
+      "n_classes": 10,
+      "output_mapping": "sudoku_output_mapping",
+      "n_rows": 2,
+      "n_cols": 2
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -2086,7 +2089,10 @@
     ],
     "output": {
       "type": "List[List[int]]",
-      "output_mapping": "unknown"
+      "n_classes": 10,
+      "output_mapping": "sudoku_output_mapping",
+      "n_rows": 2,
+      "n_cols": 2
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -2228,7 +2234,9 @@
     ],
     "output": {
       "type": "List[int]",
-      "output_mapping": "unknown"
+      "n_classes": 10,
+      "output_mapping": "list_output_mapping",
+      "length": 4
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
@@ -2252,7 +2260,9 @@
     ],
     "output": {
       "type": "List[int]",
-      "output_mapping": "unknown"
+      "n_classes": 10,
+      "output_mapping": "list_output_mapping",
+      "length": 4
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
