--- a/generation-pipeline/configuration_neural_baseline.json
+++ b/generation-pipeline/configuration_neural_baseline.json
@@ -340,7 +340,7 @@
     "dataset_size_train": 5000,
     "dataset_size_test": 500
   },
-  "permutations_ii": {
+  "permutations_ii_mnist": {
     "py_func": "permutations_ii",
     "inputs": [
       {
@@ -348,14 +348,39 @@
         "type": "List[digit]",
         "strategy": "list",
         "preprocess": "id",
-        "length": 4,
+        "length": 3,
         "dataset": "MNIST",
         "unstructured_input_type": "List[Tensor[1 x 28 x 28]]"
       }
     ],
     "output": {
-      "type": "List[int]",
-      "output_mapping": "unknown"
+      "type": "List[List[int]]",
+      "output_mapping": "2d_list_output_mapping",
+      "dim": 729
+    },
+    "learning_rate": 0.0001,
+    "batch_size_train": 16,
+    "batch_size_test": 16,
+    "dataset_size_train": 5000,
+    "dataset_size_test": 500
+  },
+  "permutations_ii_svhn": {
+    "py_func": "permutations_ii",
+    "inputs": [
+      {
+        "name": "nums",
+        "type": "List[digit]",
+        "strategy": "list",
+        "preprocess": "id",
+        "length": 3,
+        "dataset": "SVHN",
+        "unstructured_input_type": "List[Tensor[1 x 28 x 28]]"
+      }
+    ],
+    "output": {
+      "type": "List[List[int]]",
+      "output_mapping": "2d_list_output_mapping",
+      "dim": 729
     },
     "learning_rate": 0.0001,
     "batch_size_train": 16,
